# 3DEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.txt.txt  project-metadata.json
engine/: CMakeLists.txt
engine/include/: types.hpp
engine/include/math/: config.hpp  math.hpp  matrix.hpp  quaternion.hpp  trigonometry.hpp  vector.hpp
engine/include/math/transform/: matrix.hpp  quaternion.hpp  vector.hpp
engine/include/mgl/: mgl.hpp  mglAnimation.hpp  mglApp.hpp  mglCamera.hpp  mglError.hpp  mglInputManager.hpp  mglManager.hpp  mglShaderManager.hpp  mglSimulation.hpp  mglTransform.hpp
engine/include/mgl/camera/: mglCamera.hpp  mglCameraController.hpp  mglCameraManager.hpp  mglFPSCamController.hpp  mglOrbitCamController.hpp  mglPerspectiveCamera.hpp
engine/include/mgl/models/materials/: mglBasicMaterial.hpp  mglMaterial.hpp  mglPhongMaterial.hpp
engine/include/mgl/models/meshes/: mglMesh.hpp
engine/include/mgl/models/textures/: mglSampler.hpp  mglTexture.hpp  mglTextureManager.hpp  mglTextureSampler.hpp
engine/include/mgl/scene/: mglDirectionalLight.hpp  mglDrawable.hpp  mglLight.hpp  mglLightManager.hpp  mglPointLight.hpp  mglPositionalLight.hpp  mglSceneGraph.hpp  mglSceneObject.hpp  mglSpotLight.hpp
engine/include/mgl/shaders/: ShaderBuilder.hpp  ShaderProgram.hpp  ShaderUpdator.hpp
engine/include/utils/: Logger.hpp  file.hpp  noise.hpp
engine/src/mgl/: mglAnimation.cpp  mglApp.cpp  mglCamera.cpp  mglError.cpp  mglInputManager.cpp  mglShaderManager.cpp  mglShaders.cpp  mglSimulation.cpp  mglTransform.cpp
engine/src/mgl/camera/: mglCamera.cpp  mglCameraController.cpp  mglFPSCamController.cpp  mglOrbitCamController.cpp  mglPerspectiveCamera.cpp
engine/src/mgl/models/materials/: mglBasicMaterial.cpp  mglMaterial.cpp  mglPhongMaterial.cpp
engine/src/mgl/models/meshes/: mglMesh.cpp  mglMeshManager.cpp
engine/src/mgl/models/textures/: mglSampler.cpp  mglTexture.cpp  mglTextureSampler.cpp
engine/src/mgl/scene/: mglDirectionalLight.cpp  mglLight.cpp  mglLightManager.cpp  mglPointLight.cpp  mglPositionalLight.cpp  mglSceneGraph.cpp  mglSceneObject.cpp  mglSpotLight.cpp
engine/src/mgl/shaders/: ShaderBuilder.cpp  ShaderProgram.cpp  ShaderUpdator.cpp
engine/src/utils/: stb_image.cpp
examples/: CMakeLists.txt  animation-orbit-assets.cpp
examples/basic-triangle/: CMakeLists.txt
examples/legacy/: 2triangles.cpp  animation-orbit-assets.cpp  fps-camera.cpp
examples/lighting-showcase/: CMakeLists.txt
examples/lighting-showcase/resources/models/: parallelogram.mtl
examples/lighting-showcase/resources/shaders/: fragShader.glsl
examples/lighting-showcase/resources/shaders/light/: glass-front.glsl  phong-fs.glsl  statue.glsl
examples/lighting-showcase/src/: main.cpp
examples/mesh-loader/: CMakeLists.txt
examples/mesh-loader/resources/shaders/tmp_openGL/: shader.frag  shader.vert  vert.glsl
examples/mesh-loader/src/: main.cpp
examples/textures/: CMakeLists.txt
examples/textures/resources/shaders/: blend-2-textures.glsl  frag.glsl  uv-texture-moving-vert.glsl  vert.glsl
examples/textures/src/: main.cpp
examples/transforms/: CMakeLists.txt
examples/transforms/src/: main.cpp
include/: main.h
include/math/: mathVector.hpp
include/mgl/: mgl.hpp  mglAnimation.hpp  mglApp.hpp  mglCamera.hpp  mglConventions.hpp  mglInputManager.hpp  mglManager.hpp  mglShaderManager.hpp  mglShaders.hpp  mglSimulation.hpp  mglTransform.hpp
include/mgl/camera/: mglCamera.hpp  mglCameraController.hpp  mglFPSCamController.hpp  mglOrbitCamController.hpp  mglPerspectiveCamera.hpp
include/mgl/models/materials/: mglBasicMaterial.hpp  mglMaterial.hpp  mglMaterialManager.hpp  mglPhongMaterial.hpp
include/mgl/models/meshes/: mglMesh.hpp  mglMeshManager.hpp
include/mgl/models/textures/: mglSampler.hpp  mglTexture.hpp
include/mgl/scene/: mglDirectionalLight.hpp  mglDrawable.hpp  mglLight.hpp  mglLightManager.hpp  mglMaterial.hpp  mglMesh.hpp  mglMeshManager.hpp  mglPointLight.hpp  mglPositionalLight.hpp  mglSceneGraph.hpp  mglSceneObject.hpp  mglSkyBox.hpp  mglSpotLight.hpp  mglUpdatable.hpp
include/mgl/world/: mglChunk.hpp  mglChunkManager.hpp  mglWorld.hpp
include/utils/: file.hpp  logger.hpp  noise.hpp
libs/: glfw3.lib
libs/glad/: glad.h
resources/shaders/: vertexShader.glsl
resources/shaders/light/: glass-back.glsl
resources/shaders/test/: frag.glsl  vertex.glsl
src/: glad.c  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp
src/mgl/: mglApp.cpp  mglError.cpp  mglInputManager.cpp  mglShaderManager.cpp  mglShaders.cpp  mglSimulation.cpp  mglTransform.cpp
src/mgl/camera/: mglCamera.cpp  mglCameraController.cpp  mglOrbitCamController.cpp  mglPerspectiveCamera.cpp
src/mgl/models/materials/: mglBasicMaterial.cpp  mglMaterial.cpp  mglPhongMaterial.cpp
src/mgl/models/meshes/: mglMesh.cpp  mglMeshManager.cpp
src/mgl/models/textures/: mglSampler.cpp  mglTexture.cpp
src/mgl/scene/: mglDirectionalLight.cpp  mglLight.cpp  mglLightManager.cpp  mglMaterial.cpp  mglMesh.cpp  mglMeshManager.cpp  mglPointLight.cpp  mglPositionalLight.cpp  mglSceneGraph.cpp  mglSceneObject.cpp  mglSpotLight.cpp  mglTexture.cpp
src/mgl/world/: mglChunk.cpp  mglChunkManager.cpp  mglWorld.cpp
src/shaders/: skyboxVS.glsl  vertexShader.glsl
src/shaders/light/: ambient-fs-light.glsl  ambient-fs-model.glsl  basic-color-fs.glsl  glass-back.glsl  glass-front.glsl  glass.glsl  phong-fs.glsl  skybox.glsl  statue.glsl  wood.glsl
src/utils/: logger.cpp
test/: CMakeLists.txt  test_config.hpp
test/glm/: matrix.cpp  quaternion.cpp  vector.cpp
test/math/: matrix.cpp  quaternion.cpp  vector.cpp
test/mgl/: AnimationTest.cpp  TransformTest.cpp
